src/objects/REVVY__MnQuoteSolutionAttribute__c.object
<CustomObject>
    <fields>
        <fullName>REVVY__ActualValue__c</fullName>
        <label>ActualValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__AttributeValue__c</fullName>
        <label>AttributeValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>REVVY__CatalogAttribute__c</fullName>
        <label>CatalogAttribute</label>
        <referenceTo>REVVY__MnCatalogAttribute__c</referenceTo>
        <relationshipLabel>QuoteSolutionAttributes</relationshipLabel>
        <relationshipName>QuoteSolutionAttributes</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>REVVY__IsComputed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Computed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>REVVY__QuoteSolution__c</fullName>
        <label>QuoteSolution</label>
        <referenceTo>REVVY__MnQuoteSolution__c</referenceTo>
        <relationshipLabel>QuoteSolutionAttributes</relationshipLabel>
        <relationshipName>QuoteSolutionAttributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
</CustomObject>